Added semantic html structure for app

--- a/index.css
+++ b/index.css
@@ -13,3 +13,13 @@
     --very-light-greyish-cyan: hsl(189, 41%, 97%);
     --white: hsl(0, 0%, 100%);
 }
+
+.attribution { 
+    font-size: 0.688rem; 
+    text-align: center; 
+}
+
+.attribution a { 
+    font-size: 0.688rem;
+    color: hsl(228, 45%, 44%); 
+}
