--- a/index.css
+++ b/index.css
@@ -51,6 +51,10 @@ input {
     text-align: right;
 }
 
+input:active, input:focus, input:focus-visible {
+   outline: 2px solid var(--strong-cyan);
+}
+
 .bill, .people , .tip{
     margin: auto;
     padding-bottom: 0.5em;
@@ -148,6 +152,7 @@ input {
 .error {
     color:red;
     font-size: 0.75rem;
+    display: none;
 }
 
 .attribution { 
