--- a/index.css
+++ b/index.css
@@ -51,6 +51,10 @@ input {
     text-align: right;
 }
 
+input::placeholder {
+    color: var(--greyish-cyan);
+}
+
 input:active, input:focus, input:focus-visible {
    outline: 2px solid var(--strong-cyan);
 }
@@ -164,4 +168,38 @@ input:active, input:focus, input:focus-visible {
 .attribution a { 
     font-size: 0.688rem;
     color: hsl(228, 45%, 44%); 
+}
+
+@media (min-width: 1440px){
+    main {
+        max-width: 1200px;
+        display: grid;
+        grid-template-columns: 575px 575px;
+        padding: 0.75em 0.5em;
+    }
+
+    input {
+        max-width: 100%;
+    }
+
+    .tip-btn-box {
+        grid-template-columns: repeat(3, 145px);
+    }
+
+    .output-panel {
+        max-width: 100%;
+        margin: 0.25em 0.75em 0.25em 0em;
+    }
+
+    .amount-container {
+        margin: 1.5em 1.5em 0.5em;
+    } 
+    
+    .total-container {
+        margin: 0.5em 1.5em 1em;
+    }
+
+    .reset-btn {
+        margin: 2em 2em 1em;
+    }
 }
